@@ -10,6 +10,8 @@
  for the symbol at point.
  * added eclim-java-refactor-move-class which allows moving a top level
    class or interface from one package to another.
+ * added eclim-project-setting-set which can assign an Eclim project
+   setting.
 
 == 0.3
 
